[gd_scene load_steps=2 format=3 uid="uid://b8u5qcefvj7eh"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_ar3y3"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 10
script = ExtResource("1_ar3y3")

[node name="BlackOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -50.5
offset_right = 75.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonResume" type="Button" parent="VBoxContainer"]
offset_right = 150.0
offset_bottom = 31.0
focus_neighbor_top = NodePath("../ButtonMainMenu")
text = "Resume"

[node name="ButtonOptions" type="Button" parent="VBoxContainer"]
offset_top = 35.0
offset_right = 150.0
offset_bottom = 66.0
text = "Options"

[node name="ButtonMainMenu" type="Button" parent="VBoxContainer"]
offset_top = 70.0
offset_right = 150.0
offset_bottom = 101.0
focus_neighbor_bottom = NodePath("../ButtonResume")
text = "Exit to main menu
"

[connection signal="pressed" from="VBoxContainer/ButtonResume" to="." method="_on_button_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonMainMenu" to="." method="_on_button_main_menu_pressed"]
